added edge count

--- a/m.ipynb
+++ b/m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +157,19 @@
     "    G,   neighbours = build()\n",
     "    print(G.number_of_nodes() , G.number_of_edges())\n",
     "    k = 0\n",
-    "    while ( k   < maxdis) :\n",
-    "        print(\"Connected Components : \" , len(list(nx.connected_components(G))))\n",
-    "        print(\n",
-    "            f\"The graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges.\"\n",
-    "        )\n",
+    "    while ( k**k   < maxdis) :\n",
     "\n",
     "        if(len(connected_components := list(nx.connected_components(G)))) == 1 : break\n",
     "        for component in connected_components:\n",
     "            for node in component:\n",
     "                wt , pos = neighbours[node][k]\n",
-    "                if pos in component : continue\n",
+    "                # if pos in component : continue\n",
     "                G.add_edge(node , pos , weight = wt)\n",
+    "                \n",
+    "                wt, pos = neighbours[node][k**k]\n",
+    "                # if pos in component:\n",
+    "                    # continue\n",
+    "                G.add_edge(node, pos, weight=wt)\n",
     "        k += 1\n",
     "    else :\n",
     "        print(\"merge phase\")\n",
@@ -189,38 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30000 0\n",
-      "Connected Components :  30000\n",
-      "The graph has 30000 nodes and 0 edges.\n",
-      "Connected Components :  9347\n",
-      "The graph has 30000 nodes and 20653 edges.\n",
-      "Connected Components :  1384\n",
-      "The graph has 30000 nodes and 32254 edges.\n",
-      "Connected Components :  69\n",
-      "The graph has 30000 nodes and 35945 edges.\n",
-      "Connected Components :  3\n",
-      "The graph has 30000 nodes and 36178 edges.\n",
-      "Connected Components :  1\n",
-      "The graph has 30000 nodes and 36186 edges.\n",
-      "30000 29999\n",
-      "Minimum Spanning Tree: 30000 nodes, 29999 edges, Total Weight: 558.7780679240302\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dc_weight, edgecount = dcrun()"
+    "dc_weight, dc_edgecount = dcrun()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,18 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MST Weight:  552.6584523925505\n",
-      "time taken by dcran :  292.84383511543274\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -341,17 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Speedup: 60.98\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "speedup = eprim_elapsed_time / dcran_elapsed_time\n",
     "print(f\"Speedup: {speedup:.2f}\")"
@@ -359,17 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Weight Error: 1.107305154745545%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wt_error = abs(dc_weight - eprim_wt) / eprim_wt * 100\n",
     "print(f\"Weight Error: {wt_error}%\")"
@@ -391,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,26 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/voy/.local/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time taken by fast mst :  21.599529504776\n",
-      "Total weight of the MST: 567.4421476347139\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fmst_start_time = time.time()\n",
     "def euclidean_distance(p1, p2):\n",
@@ -524,6 +461,7 @@
     "\n",
     "mst_edges, fmst_weight = fast_mst(points)\n",
     "fmst_end_time = time.time()\n",
+    "fmst_edgecount = len(mst_edges)\n",
     "fmst_elapsed_time = fmst_end_time - fmst_start_time\n",
     "print(\"time taken by fast mst : \", fmst_elapsed_time)\n",
     "\n",
@@ -532,24 +470,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[15000, 1, 388.4671601598729, 402.1512753753429, 384.616386082632, 14937, 14999, 3.4027282899197826, 1.001198653146716, 2.134377956390381, 7.74036431312561, 66.63328146934509, 8.608545899622925, 31.219063741659898], [15000, 1, 388.4671601598729, 405.1375707059836, 384.616386082632, 15076, 14999, 5.335494109432655, 1.001198653146716, 2.128080129623413, 7.959125280380249, 64.9901123046875, 8.165484273113814, 30.539316353744727], [20000, 1, 452.5071743910072, 461.8487887042647, 447.6115359486492, 19991, 19999, 3.18071622650244, 1.0937248147508964, 3.112299919128418, 11.40512728691101, 115.74361753463745, 10.148384548716923, 37.189095055803875]]\n",
-      "[[15000, 1, 388.4671601598729, 402.1512753753429, 384.616386082632, 14937, 14999, 3.4027282899197826, 1.001198653146716, 2.134377956390381, 7.74036431312561, 66.63328146934509, 8.608545899622925, 31.219063741659898], [15000, 1, 388.4671601598729, 405.1375707059836, 384.616386082632, 15076, 14999, 5.335494109432655, 1.001198653146716, 2.128080129623413, 7.959125280380249, 64.9901123046875, 8.165484273113814, 30.539316353744727], [20000, 1, 452.5071743910072, 461.8487887042647, 447.6115359486492, 19991, 19999, 3.18071622650244, 1.0937248147508964, 3.112299919128418, 11.40512728691101, 115.74361753463745, 10.148384548716923, 37.189095055803875]]\n",
-      "|   Points |   Centres |   DCRAN Wt |   FMST Wt |   Prim's Wt |   FMST Edges |   Prim's Edges |   FMST Acc(%) |   DCRAN Acc(%) |   DCRAN Time (s) |   FMST Time (s) |   Prim's Time (s) |   Prim's Speedup |   DCRAN Speedup |\n",
-      "|---------:|----------:|-----------:|----------:|------------:|-------------:|---------------:|--------------:|---------------:|-----------------:|----------------:|------------------:|-----------------:|----------------:|\n",
-      "|    15000 |         1 |      388.5 |     402.2 |       384.6 |        14937 |          14999 |          3.40 |           1.00 |             2.13 |            7.74 |             66.63 |             8.61 |           31.22 |\n",
-      "|    15000 |         1 |      388.5 |     405.1 |       384.6 |        15076 |          14999 |          5.34 |           1.00 |             2.13 |            7.96 |             64.99 |             8.17 |           30.54 |\n",
-      "|    20000 |         1 |      452.5 |     461.8 |       447.6 |        19991 |          19999 |          3.18 |           1.09 |             3.11 |           11.41 |            115.74 |            10.15 |           37.19 |\n",
-      "|    30000 |         1 |      558.8 |     567.4 |       552.7 |        29835 |          29999 |          2.68 |           1.11 |             4.80 |           21.60 |            292.84 |            13.56 |           60.98 |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(savefile, \"r\") as f:\n",
     "    loaded_data = json.load(f)\n",
@@ -562,8 +485,8 @@
     "        dc_weight,\n",
     "        fmst_weight,\n",
     "        eprim_wt,\n",
-    "        len(mst_edges),\n",
-    "        len(mst),\n",
+    "        dc_edgecount,\n",
+    "        fmst_edgecount,\n",
     "        abs(fmst_weight - eprim_wt) / eprim_wt * 100,\n",
     "        abs(dc_weight - eprim_wt) / eprim_wt * 100,\n",
     "        dcran_elapsed_time,\n",
