--- a/m.ipynb
+++ b/m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
     "savefile = \"data.json\"\n",
-    "points_count = 30000\n",
+    "points_count = 50000\n",
     "to_plot = False\n",
-    "no_centres = 1"
+    "no_centres = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,57 +149,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dcrun():\n",
-    "    G,   neighbours = build()\n",
-    "    print(G.number_of_nodes() , G.number_of_edges())\n",
+    "    G, neighbours = build()\n",
+    "    print(G.number_of_nodes(), G.number_of_edges())\n",
     "    k = 0\n",
-    "    while ( k**k   < maxdis) :\n",
-    "\n",
-    "        if(len(connected_components := list(nx.connected_components(G)))) == 1 : break\n",
+    "    while k < maxdis:\n",
+    "        print(\"Connected Components : \", len(list(nx.connected_components(G))))\n",
+    "        print(\n",
+    "            f\"The graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges.\"\n",
+    "        )\n",
+    "        graphify(\n",
+    "            G,\n",
+    "            to_plot,\n",
+    "            bottom_text=f\"Iteration: {k}, Connected Components: {len(list(nx.connected_components(G)))}\\nNumber of Edges: {G.number_of_edges()}\",\n",
+    "        )\n",
+    "        if (len(connected_components := list(nx.connected_components(G)))) == 1:\n",
+    "            break\n",
     "        for component in connected_components:\n",
     "            for node in component:\n",
-    "                wt , pos = neighbours[node][k]\n",
-    "                # if pos in component : continue\n",
-    "                G.add_edge(node , pos , weight = wt)\n",
-    "                \n",
-    "                wt, pos = neighbours[node][k**k]\n",
-    "                # if pos in component:\n",
-    "                    # continue\n",
+    "                wt, pos = neighbours[node][k]\n",
+    "                if pos in component:\n",
+    "                    continue\n",
     "                G.add_edge(node, pos, weight=wt)\n",
     "        k += 1\n",
-    "    else :\n",
+    "    else:\n",
     "        print(\"merge phase\")\n",
     "        merge_phase(G)\n",
     "        print(\n",
     "            f\"The graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges.\"\n",
     "        )\n",
-    "        print(\"Connected Components : \" , len(list(nx.connected_components(G))))\n",
-    "    edgecount = G.number_of_edges()\n",
-    "    mst = nx.minimum_spanning_tree(G)    \n",
-    "    print(mst.number_of_nodes() , mst.number_of_edges())\n",
-    "    mst_weight = sum(data[\"weight\"] for u, v, data in mst.edges(data=True)) \n",
+    "        print(\"Connected Components : \", len(list(nx.connected_components(G))))\n",
+    "        graphify(\n",
+    "            G,\n",
+    "            to_plot,\n",
+    "            bottom_text=f\"Merge Phase, Connected Components: {len(list(nx.connected_components(G)))}\\nNumber of Edges: {G.number_of_edges()}\",\n",
+    "        )\n",
+    "    mst = nx.minimum_spanning_tree(G)\n",
+    "    print(mst.number_of_nodes(), mst.number_of_edges())\n",
+    "    mst_weight = round(sum(data[\"weight\"] for u, v, data in mst.edges(data=True)), 2)\n",
     "    print(\n",
     "        f\"Minimum Spanning Tree: {mst.number_of_nodes()} nodes, {mst.number_of_edges()} edges, Total Weight: {mst_weight}\"\n",
     "    )\n",
-    "    return mst_weight , edgecount"
+    "\n",
+    "    graphify(\n",
+    "        mst,\n",
+    "        to_plot,\n",
+    "        bottom_text=f\"Minimum Spanning Tree: {G.number_of_nodes()} nodes, \\nTotal Weight: {mst_weight}\",\n",
+    "    )\n",
+    "    return mst_weight, G.number_of_edges()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50000 0\n",
+      "Connected Components :  50000\n",
+      "The graph has 50000 nodes and 0 edges.\n",
+      "Connected Components :  15472\n",
+      "The graph has 50000 nodes and 34528 edges.\n",
+      "Connected Components :  2339\n",
+      "The graph has 50000 nodes and 53540 edges.\n",
+      "Connected Components :  84\n",
+      "The graph has 50000 nodes and 59796 edges.\n",
+      "Connected Components :  5\n",
+      "The graph has 50000 nodes and 60110 edges.\n",
+      "Connected Components :  3\n",
+      "The graph has 50000 nodes and 60116 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "Connected Components :  2\n",
+      "The graph has 50000 nodes and 60118 edges.\n",
+      "merge phase\n",
+      "merging (-3.6192290438674934, 1.681475761844445) and (6.644590167442833, -5.727421441480105) with pivot (2.2332742101158565, -3.172998834183396) and (4.189423429715498, -3.3243916680008283)\n",
+      "The graph has 50000 nodes and 60119 edges.\n",
+      "Connected Components :  1\n",
+      "50000 49999\n",
+      "Minimum Spanning Tree: 50000 nodes, 49999 edges, Total Weight: 1987.54\n"
+     ]
+    }
+   ],
    "source": [
     "dc_weight, dc_edgecount = dcrun()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MST Weight:  1964.622610853823\n",
+      "time taken by dcran :  789.9790432453156\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -311,9 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Speedup: 60.44\n"
+     ]
+    }
+   ],
    "source": [
     "speedup = eprim_elapsed_time / dcran_elapsed_time\n",
     "print(f\"Speedup: {speedup:.2f}\")"
@@ -321,9 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weight Error: 1.166503379303826%\n"
+     ]
+    }
+   ],
    "source": [
     "wt_error = abs(dc_weight - eprim_wt) / eprim_wt * 100\n",
     "print(f\"Weight Error: {wt_error}%\")"
@@ -345,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +442,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/voy/.local/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time taken by fast mst :  46.351282596588135\n",
+      "Total weight of the MST: 2009.5957220693579\n"
+     ]
+    }
+   ],
    "source": [
     "fmst_start_time = time.time()\n",
     "def euclidean_distance(p1, p2):\n",
@@ -470,9 +573,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10000, 10, 877.65, 891.7851946441831, 865.3329904388637, 12089, 9999, 3.0568815123879474, 1.4233837952820403, 2.181704044342041, 8.06056261062622, 30.508898973464966, 3.7849589969371564, 13.983976906760445], [1000, 10, 272.62, 269.3821303743565, 258.81913472345116, 1203, 999, 4.081226707674429, 5.33224303191304, 0.15179872512817383, 0.24590039253234863, 0.2952311038970947, 1.200612576729647, 1.9448852659850162], [100, 10, 94.84, 97.0053015053769, 92.5713108376204, 119, 99, 4.789810825444807, 2.450747582433088, 0.0512537956237793, 0.045298099517822266, 0.0034923553466796875, 0.07709717148962598, 0.06813847255947231]]\n",
+      "[[10000, 10, 877.65, 891.7851946441831, 865.3329904388637, 12089, 9999, 3.0568815123879474, 1.4233837952820403, 2.181704044342041, 8.06056261062622, 30.508898973464966, 3.7849589969371564, 13.983976906760445], [1000, 10, 272.62, 269.3821303743565, 258.81913472345116, 1203, 999, 4.081226707674429, 5.33224303191304, 0.15179872512817383, 0.24590039253234863, 0.2952311038970947, 1.200612576729647, 1.9448852659850162], [100, 10, 94.84, 97.0053015053769, 92.5713108376204, 119, 99, 4.789810825444807, 2.450747582433088, 0.0512537956237793, 0.045298099517822266, 0.0034923553466796875, 0.07709717148962598, 0.06813847255947231]]\n",
+      "|   Points |   Centres |   DCRAN Wt |   FMST Wt |   Prim's Wt |   dc Edges |   Prim's Edges |   FMST Acc(%) |   DCRAN Acc(%) |   DCRAN Time (s) |   FMST Time (s) |   Prim's Time (s) |   Prim's Speedup |   DCRAN Speedup |\n",
+      "|---------:|----------:|-----------:|----------:|------------:|-----------:|---------------:|--------------:|---------------:|-----------------:|----------------:|------------------:|-----------------:|----------------:|\n",
+      "|    10000 |        10 |      877.6 |     891.8 |       865.3 |      12089 |           9999 |          3.06 |           1.42 |             2.18 |            8.06 |             30.51 |             3.78 |           13.98 |\n",
+      "|     1000 |        10 |      272.6 |     269.4 |       258.8 |       1203 |            999 |          4.08 |           5.33 |             0.15 |            0.25 |              0.30 |             1.20 |            1.94 |\n",
+      "|      100 |        10 |       94.8 |      97.0 |        92.6 |        119 |             99 |          4.79 |           2.45 |             0.05 |            0.05 |              0.00 |             0.08 |            0.07 |\n",
+      "|    50000 |        10 |     1987.5 |    2009.6 |      1964.6 |      60119 |          49999 |          2.29 |           1.17 |            13.07 |           46.35 |            789.98 |            17.04 |           60.44 |\n"
+     ]
+    }
+   ],
    "source": [
     "with open(savefile, \"r\") as f:\n",
     "    loaded_data = json.load(f)\n",
@@ -508,7 +626,7 @@
     "        dc_weight,\n",
     "        fmst_weight,\n",
     "        eprim_wt,\n",
-    "        len(mst_edges),\n",
+    "        dc_edgecount,\n",
     "        len(mst),\n",
     "        abs(fmst_weight - eprim_wt) / eprim_wt * 100,\n",
     "        abs(dc_weight - eprim_wt) / eprim_wt * 100,\n",
@@ -529,7 +647,7 @@
     "    \"DCRAN Wt\",\n",
     "    \"FMST Wt\",\n",
     "    \"Prim's Wt\",\n",
-    "    \"FMST Edges\",\n",
+    "    \"dc Edges\",\n",
     "    \"Prim's Edges\",\n",
     "    \"FMST Acc(%)\",\n",
     "    \"DCRAN Acc(%)\",\n",
