--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -34,17 +34,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merging (-4.712142983737645, -9.524507962194953) and (3.265453643430441, -9.259468732397956) with pivot (-3.371813245673291, -8.218176842717106) and (1.9169394645376807, -8.487715623019715)\n",
-      "Merging (3.265453643430441, -9.259468732397956) and (-7.256505738806536, 1.9317558864602458) with pivot (2.1975433032807876, -7.810547365135047) and (-6.200667815204298, 0.5230957313660556)\n",
-      "K-MSTree: Total Weight: 63.03, Edge Count: 456\n",
-      "Merging (-4.712142983737645, -9.524507962194953) and (3.265453643430441, -9.259468732397956) with pivot (-3.371813245673291, -8.218176842717106) and (1.9169394645376807, -8.487715623019715)\n",
-      "Merging (3.265453643430441, -9.259468732397956) and (-7.256505738806536, 1.9317558864602458) with pivot (2.1975433032807876, -7.810547365135047) and (-6.200667815204298, 0.5230957313660556)\n",
-      "K-MST: Total Weight: 63.04, Edge Count: 279\n",
-      "Prim's MST: 100 nodes, 99 edges, Total Weight: 59.29\n"
+      "K-MSTree: Total Weight: 13.91, Edge Count: 238, Runtime: 0.0063 seconds\n",
+      "K-MST: Total Weight: 13.93, Edge Count: 260, Runtime: 0.0095 seconds\n",
+      "Prim's MST: 100 nodes, 99 edges, Total Weight: 13.89, Runtime: 0.0166 seconds\n"
      ]
     }
    ],
    "source": [
+    "import time as tm\n",
+    "\n",
+    "savefile = \"data.json\"\n",
+    "points_count = 100\n",
+    "to_plot = False\n",
+    "no_centres = 3\n",
+    "noise = 0.1\n",
+    "dataset_types = [\"circles\", \"moons\", \"blobs\"]\n",
+    "dataset_type = dataset_types[0]\n",
+    "\n",
     "points = generate_dataset(\n",
     "    dataset_type=dataset_type,\n",
     "    points_count=points_count,\n",
@@ -55,19 +61,32 @@
     "\n",
     "mst_builder = MST(points)\n",
     "\n",
+    "start_time = tm.time()\n",
     "mst_weight, edge_count, final_graph = mst_builder.apply_mst(\n",
     "    algorithm=\"kmistree\", to_plot=to_plot\n",
     ")\n",
-    "print(f\"K-MSTree: Total Weight: {mst_weight}, Edge Count: {edge_count}\")\n",
+    "end_time = tm.time()\n",
+    "kmistree_runtime = end_time - start_time\n",
+    "print(\n",
+    "    f\"K-MSTree: Total Weight: {mst_weight}, Edge Count: {edge_count}, Runtime: {kmistree_runtime:.4f} seconds\"\n",
+    ")\n",
     "\n",
+    "start_time = tm.time()\n",
     "mst_weight, edge_count, final_graph = mst_builder.apply_mst(\n",
     "    algorithm=\"kmist\", to_plot=to_plot\n",
     ")\n",
-    "print(f\"K-MST: Total Weight: {mst_weight}, Edge Count: {edge_count}\")\n",
-    "\n",
-    "prim_weight = mst_builder.apply_mst(algorithm=\"prim\", to_plot=to_plot)\n",
+    "end_time = tm.time()\n",
+    "kmist_runtime = end_time - start_time\n",
     "print(\n",
-    "    f\"Prim's MST: {len(points)} nodes, {len(points) - 1} edges, Total Weight: {prim_weight}\"\n",
+    "    f\"K-MST: Total Weight: {mst_weight}, Edge Count: {edge_count}, Runtime: {kmist_runtime:.4f} seconds\"\n",
+    ")\n",
+    "\n",
+    "start_time = tm.time()\n",
+    "prim_weight = mst_builder.apply_mst(algorithm=\"prim\", to_plot=to_plot)\n",
+    "end_time = tm.time()\n",
+    "prim_runtime = end_time - start_time\n",
+    "print(\n",
+    "    f\"Prim's MST: {len(points)} nodes, {len(points) - 1} edges, Total Weight: {prim_weight}, Runtime: {prim_runtime:.4f} seconds\"\n",
     ")"
    ]
   },
