--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -17,16 +17,16 @@
    "source": [
     "# Example usage:\n",
     "\n",
-    "points_count = 100\n",
-    "to_plot = False\n",
-    "noise = 0.1\n",
-    "dataset_types = [\"circles\", \"moons\", \"blobs\"]\n",
-    "dataset_type = dataset_types[2]\n",
-    "dataset_sizes = [100, 500, 1000, 3000, 5000, 10000, 15000,20000, 30000 , 50000]\n",
-    "dataset_types = [\"circles\", \"moons\", \"blobs\"]\n",
-    "noise = 0.1\n",
-    "no_centres = 1\n",
-    "filename = \"mst_results.json\""
+    "# points_count = 100\n",
+    "# to_plot = False\n",
+    "# noise = 0.1\n",
+    "# dataset_types = [\"circles\", \"moons\", \"blobs\"]\n",
+    "# dataset_type = dataset_types[2]\n",
+    "# dataset_sizes = [100, 500, 1000, 3000, 5000, 10000, 15000,20000, 30000 , 50000]\n",
+    "# dataset_types = [\"circles\", \"moons\", \"blobs\"]\n",
+    "# noise = 0.1\n",
+    "# no_centres = 1\n",
+    "# filename = \"mst_results.json\""
    ]
   },
   {
@@ -1337,6 +1337,7 @@
     "        results = {\n",
     "            \"dataset_type\": dataset_type,\n",
     "            \"points_count\": points_count,\n",
+    "            \"no_centres\": no_centres,\n",
     "            \"run\": run + 1,\n",
     "        }\n",
     "\n",
@@ -1410,23 +1411,27 @@
     "    return all_results\n",
     "\n",
     "\n",
-    "# Dataset parameters\n",
+    "# Parameters\n",
+    "dataset_type = \"blobs\"\n",
+    "points_count = 10000\n",
+    "noise = 0.1\n",
+    "no_centres_list = [1, 2,  5 ,10 , 20 , 50 , 100 ,200 ,  500 ,  1000 ,2000 ,  5000 , 10000]  # Different number of centers\n",
+    "filename = \"mst_results_10000_blobs.json\"\n",
     "\n",
-    "\n",
-    "# Run experiments for different dataset sizes and types\n",
+    "# Run experiments for different numbers of centers\n",
     "all_experiment_results = []\n",
-    "for size in dataset_sizes:\n",
-    "    for dataset_type in dataset_types:\n",
-    "        experiment_results = evaluate_mst_algorithms(\n",
-    "            dataset_type, size, noise, no_centres, filename\n",
-    "        )\n",
-    "        all_experiment_results.extend(experiment_results)\n",
+    "for no_centres in no_centres_list:\n",
+    "    experiment_results = evaluate_mst_algorithms(\n",
+    "        dataset_type, points_count, noise, no_centres, filename\n",
+    "    )\n",
+    "    all_experiment_results.extend(experiment_results)\n",
     "\n",
     "# Prepare data for tabulate\n",
     "table = []\n",
     "headers = [\n",
     "    \"Dataset Type\",\n",
     "    \"Points Count\",\n",
+    "    \"No Centres\",\n",
     "    \"Run\",\n",
     "    \"Algorithm\",\n",
     "    \"Weight\",\n",
@@ -1439,10 +1444,11 @@
     "\n",
     "for result in all_experiment_results:\n",
     "    for key, value in result.items():\n",
-    "        if key not in [\"dataset_type\", \"points_count\", \"run\"]:\n",
+    "        if key not in [\"dataset_type\", \"points_count\", \"no_centres\", \"run\"]:\n",
     "            row = [\n",
     "                result[\"dataset_type\"],\n",
     "                result[\"points_count\"],\n",
+    "                result[\"no_centres\"],\n",
     "                result[\"run\"],\n",
     "                key,\n",
     "                value[\"weight\"],\n",
@@ -1458,7 +1464,55 @@
     "print(tabulate(table, headers, tablefmt=\"grid\"))\n",
     "\n",
     "# Print results for verification\n",
-    "print(json.dumps(all_experiment_results, indent=4))"
+    "print(json.dumps(all_experiment_results, indent=4))\n",
+    "\n",
+    "\n",
+    "# Function to load results from JSON file\n",
+    "def load_results_from_json(filename):\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        results = [json.loads(line.strip()) for line in f]\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "# Load results from JSON file\n",
+    "results = load_results_from_json(filename)\n",
+    "\n",
+    "# Prepare data for tabulate\n",
+    "table = []\n",
+    "headers = [\n",
+    "    \"Dataset Type\",\n",
+    "    \"Points Count\",\n",
+    "    \"No Centres\",\n",
+    "    \"Run\",\n",
+    "    \"Algorithm\",\n",
+    "    \"Weight\",\n",
+    "    \"Edge Count\",\n",
+    "    \"Runtime (s)\",\n",
+    "    \"Weight Error\",\n",
+    "    \"Edge Count Ratio\",\n",
+    "    \"Runtime Ratio\",\n",
+    "]\n",
+    "\n",
+    "for result in results:\n",
+    "    for key, value in result.items():\n",
+    "        if key not in [\"dataset_type\", \"points_count\", \"no_centres\", \"run\"]:\n",
+    "            row = [\n",
+    "                result[\"dataset_type\"],\n",
+    "                result[\"points_count\"],\n",
+    "                result[\"no_centres\"],\n",
+    "                result[\"run\"],\n",
+    "                key,\n",
+    "                value[\"weight\"],\n",
+    "                value[\"edge_count\"],\n",
+    "                value[\"runtime\"],\n",
+    "                value.get(\"weight_error\", 0),\n",
+    "                value.get(\"edge_count_error\", 0),\n",
+    "                value.get(\"runtime_error\", 0),\n",
+    "            ]\n",
+    "            table.append(row)\n",
+    "\n",
+    "# Print results using tabulate\n",
+    "print(tabulate(table, headers, tablefmt=\"grid\"))"
    ]
   }
  ],
